kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eddiehub-api-deployment
  labels:
    app: eddiehub-api
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  # readinessProbe:
  #   periodSeconds: 15
  #   timeoutSeconds: 2
  #   successThreshold: 2
  #   failureThreshold: 2
  #   httpGet:
  #     path: /
  #     port: 80
  selector:
    matchLabels:
      app: eddiehub-api
  template:
    metadata:
      labels:
        app: eddiehub-api
    spec:
      volumes:
        - name: mongo-crt
          secret:
            secretName: mongo-crt
      containers:
        - name: api
          image: ghcr.io/eddiehubcommunity/api:latest
          volumeMounts:
            - mountPath: '/etc/mongo/crt'
              name: mongo-crt
              readOnly: true
          ports:
            - containerPort: 3000
