kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eddiehub-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "api.eddiehub.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eddiehub-api-service
            port:
              number: 3000
  - host: "api.eddiehub.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eddiehub-api-service
            port:
              number: 3000
